--- a/profiles/nextflow.config
+++ b/profiles/nextflow.config
@@ -2,9 +2,9 @@ profiles {
     spartan {
         // Spartan limits. There is a bigmem queue with 3 TB available
         params {
-            max_cpus                   = 72
-            max_memory                 = 710000.MB
-            max_time                   = 90.d
+            max_cpus = 72
+            max_memory = 710000.MB
+            max_time = 90.d
         }
 
         //  Note, it's tempting to use the apptainer profile, but the nf-core
@@ -12,9 +12,9 @@ profiles {
         //  `workflow.containerEngine == 'singularity'` that prevents using the
         //  right URL with apptainer.
         singularity {
-            enabled     = true
-            autoMounts  = true
-            runOptions  = '-B $PWD,$TMPDIR,/data --nv -H $(mktemp -d) --pwd $PWD --containall --cleanenv --writable-tmpfs'
+            enabled = true
+            autoMounts = true
+            runOptions = '-B $PWD,$TMPDIR,/data --nv -H $(mktemp -d) --pwd $PWD --containall --cleanenv --writable-tmpfs'
         }
 
         // Submit up to 256 concurrent jobs (Setonix work partition max)
@@ -25,24 +25,24 @@ profiles {
         // Define process resource limits
         process {
             resourceLimits = [
-        memory: 710000.MB,
-        cpus: 72,
-    ]
-            executor       = 'slurm'
-            module         = 'Apptainer/1.3.3'
-            cache          = 'lenient'
-            stageInMode    = 'symlink'
-            queue          = { task.memory > 710000.MB ? 'bigmem' : null }
+                memory: 710000.MB,
+                cpus: 72,
+            ]
+            executor = 'slurm'
+            module = 'Apptainer/1.3.3'
+            cache = 'lenient'
+            stageInMode = 'symlink'
+            queue = { task.memory > 710000.MB ? 'bigmem' : null }
         }
     }
 
     pawsey {
-        workDir     = "${MYSCRATCH}/atol-test-profiles/.nextflow/work"
+        workDir = "${MYSCRATCH}/atol-test-profiles/.nextflow/work"
 
         params {
-            max_cpus                   = 64
-            max_memory                 = 230.GB
-            max_time                   = 4.d
+            max_cpus = 64
+            max_memory = 230.GB
+            max_time = 4.d
         }
 
         //  Note, it's tempting to use the apptainer profile, but the nf-core
@@ -50,9 +50,9 @@ profiles {
         //  `workflow.containerEngine == 'singularity'` that prevents using the
         //  right URL with apptainer.
         singularity {
-            enabled     = true
-            autoMounts  = true
-            runOptions  = '-B $PWD,$TMPDIR,/scratch -H $(mktemp -d) --pwd $PWD --containall --cleanenv --writable-tmpfs'
+            enabled = true
+            autoMounts = true
+            runOptions = '-B $PWD,$TMPDIR,/scratch -H $(mktemp -d) --pwd $PWD --containall --cleanenv --writable-tmpfs'
         }
 
         // Submit up to 256 concurrent jobs (Setonix work partition max)
@@ -63,20 +63,18 @@ profiles {
         // Define process resource limits
         process {
             resourceLimits = [
-        memory: 230.GB,
-        cpus: 64,
-    ]
-            executor       = 'slurm'
-            module         = 'singularity/4.1.0-nohost'
-            cache          = 'lenient'
-            stageInMode    = 'symlink'
-            queue          = { task.memory > 230.GB ? 'highmem' : (task.time > 1.d ? 'long' : null) }
+                memory: 230.GB,
+                cpus: 64,
+            ]
+            executor = 'slurm'
+            module = 'singularity/4.1.0-nohost'
+            cache = 'lenient'
+            stageInMode = 'symlink'
+            queue = { task.memory > 230.GB ? 'highmem' : (task.time > 1.d ? 'long' : null) }
             // Try to avoid the long queue by redifining the time for jobs that
             // request more than 1.d on the first attempt. Subsequent attempts
             // won't be modified.
-            // withName: '.*' {
-            //     time = { task.time > 1.d && task.attempt == 1 ? 1.d : task.time }
-            // }
+            time = { task.time > 1.d && task.attempt == 1 ? 1.d : task.time }
         }
         aws {
             client {
@@ -88,9 +86,9 @@ profiles {
     standard {
         process.executor = 'local'
         singularity {
-            enabled     = true
-            autoMounts  = true
-            runOptions  = '-B $PWD,$TMPDIR -H $(mktemp -d) --pwd $PWD --containall --cleanenv --writable-tmpfs'
+            enabled = true
+            autoMounts = true
+            runOptions = '-B $PWD,$TMPDIR -H $(mktemp -d) --pwd $PWD --containall --cleanenv --writable-tmpfs'
         }
         aws {
             client {
@@ -100,4 +98,3 @@ profiles {
         }
     }
 }
-
