start pawsey setup

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,13 +1,9 @@
 from pathlib import Path
 
-mydir = "s3://pawsey1132.atol.testassembly"
-
 
 rule createFile:
     output:
-        outfile=storage.s3(
-            Path(mydir, "testfile.snakemake.txt").as_posix(),
-        ),
+        outfile=storage.s3("s3://pawsey1132.atol.testassembly/testfile.snakemake.txt"),
     container:
         "docker://amazon/aws-cli:2.22.31"
     resources:
