start pawsey setup

--- a/profiles/nextflow.config
+++ b/profiles/nextflow.config
@@ -74,9 +74,9 @@ profiles {
             // Try to avoid the long queue by redifining the time for jobs that
             // request more than 1.d on the first attempt. Subsequent attempts
             // won't be modified.
-            // withName: '.*' {
-            //     time = { task.time > 1.d && task.attempt == 1 ? 1.d : task.time }
-            // }
+            withName: 'createFile' {
+                time = { task.time > 1.d && task.attempt == 1 ? 1.d : task.time }
+            }
         }
         aws {
             client {
