start pawsey setup

--- a/profiles/nextflow.config
+++ b/profiles/nextflow.config
@@ -75,7 +75,8 @@ profiles {
             // request more than 1.d on the first attempt. Subsequent attempts
             // won't be modified.
 
-            time = { task.time > 1.d && task.attempt == 1 ? 1.d : task.time }
+            // time = { task.time > 1.d && task.attempt == 1 ? 1.d : task.time }
+            time = 1.d
         }
         aws {
             client {
