start pawsey setup

--- a/profiles/nextflow.config
+++ b/profiles/nextflow.config
@@ -76,7 +76,6 @@ profiles {
             // won't be modified.
 
             // time = { task.time > 1.d && task.attempt == 1 ? 1.d : task.time }
-            time = 1.d
         }
         aws {
             client {
@@ -99,4 +98,14 @@ profiles {
             }
         }
     }
+
+
+}
+
+
+withName: '.*' {
+    // Try to avoid the long queue by redefining the time for jobs that
+    // request more than 1.d on the first attempt. Subsequent attempts
+    // won't be modified.
+    time = 1.d
 }
