start pawsey setup

--- a/profiles/nextflow.config
+++ b/profiles/nextflow.config
@@ -1,41 +1,4 @@
 profiles {
-    spartan {
-        // Spartan limits. There is a bigmem queue with 3 TB available
-        params {
-            max_cpus = 72
-            max_memory = 710000.MB
-            max_time = 90.d
-        }
-
-        //  Note, it's tempting to use the apptainer profile, but the nf-core
-        //  (and some sanger-tol) pipelines have a conditional
-        //  `workflow.containerEngine == 'singularity'` that prevents using the
-        //  right URL with apptainer.
-        singularity {
-            enabled = true
-            autoMounts = true
-            runOptions = '-B $PWD,$TMPDIR,/data --nv -H $(mktemp -d) --pwd $PWD --containall --cleanenv --writable-tmpfs'
-        }
-
-        // Submit up to 256 concurrent jobs (Setonix work partition max)
-        executor {
-            queueSize = 128
-        }
-
-        // Define process resource limits
-        process {
-            resourceLimits = [
-                memory: 710000.MB,
-                cpus: 72,
-            ]
-            executor = 'slurm'
-            module = 'Apptainer/1.3.3'
-            cache = 'lenient'
-            stageInMode = 'symlink'
-            queue = { task.memory > 710000.MB ? 'bigmem' : null }
-        }
-    }
-
     pawsey {
         workDir = "${MYSCRATCH}/atol-test-profiles/.nextflow/work"
 
@@ -71,11 +34,10 @@ profiles {
             cache = 'lenient'
             stageInMode = 'symlink'
             queue = { task.memory > 230.GB ? 'highmem' : (task.time > 1.d ? 'long' : null) }
-            // Try to avoid the long queue by redifining the time for jobs that
-            // request more than 1.d on the first attempt. Subsequent attempts
-            // won't be modified.
 
-            // time = { task.time > 1.d && task.attempt == 1 ? 1.d : task.time }
+            withName: createFile {
+                time = 12.h
+            }
         }
         aws {
             client {
@@ -98,14 +60,5 @@ profiles {
             }
         }
     }
-
-
 }
-
-
-withName: '.*' {
-    // Try to avoid the long queue by redefining the time for jobs that
-    // request more than 1.d on the first attempt. Subsequent attempts
-    // won't be modified.
-    time = 1.d
 }
