start pawsey setup

--- a/profiles/nextflow.config
+++ b/profiles/nextflow.config
@@ -35,7 +35,7 @@ profiles {
             stageInMode = 'symlink'
             queue = { task.memory > 230.GB ? 'highmem' : (task.time > 1.d ? 'long' : null) }
 
-            withName: createFile {
+            withName: '.*' {
                 time = 12.h
             }
         }
