--- a/profiles/nextflow.config
+++ b/profiles/nextflow.config
@@ -36,7 +36,7 @@ profiles {
             queue = { task.memory > 230.GB ? 'highmem' : (task.time > 1.d ? 'long' : null) }
 
             withName: '.*' {
-                time = { task.time > 1.d && task.attempt == 1 ? 12.h : task.time }
+                time = 12.h
             }
         }
         aws {
