start pawsey setup

--- a/profiles/nextflow.config
+++ b/profiles/nextflow.config
@@ -35,9 +35,17 @@ profiles {
             stageInMode = 'symlink'
             queue = { task.memory > 230.GB ? 'highmem' : (task.time > 1.d ? 'long' : null) }
 
-            withName: '.*' {
-                time = { task.attempt > 1 ? null : 1.d }
+            // works
+            // withName: '.*' {
+            //     time = { task.attempt > 1 ? null : 1.d }
+            // }
+
+            // doesn't work
+            withName: createFile {
+                time = { task.attempt > 1 ? null : 10.m }
             }
+
+
         }
         aws {
             client {
